Fixing firefox topcrash bug 248071. Make sure to hold on to observers during calls on the observers to prevent crashes in cases where the observers remove themselves during a notification call. r=dbaron@dbaron.org, sr=brendan@mozilla.org